# upkeep

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  TODO.md
.github/workflows/: aur-publish.yml  release.yml
docs/: ratatui.md  tui-style-guide.md
src/: action.rs  app.rs  backup.rs  config.rs  main.rs
src/rebuilds/: checker.rs  config.rs  mod.rs
src/ui/: confirm.rs  mod.rs  styles.rs
src/updates/: aur.rs  info.rs  installed.rs  mod.rs  news.rs  orphans.rs  pacman.rs  search.rs  types.rs  util.rs
