[package]
name = "upkeep"
version = "0.1.0"
edition = "2021"
description = "Arch Linux system updater TUI"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "process", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
anyhow = "1"
dirs = "5"
